# DiveSMS

./: .firebaserc  .gitignore  build.gradle  gradle.properties  gradlew  settings.gradle
_scripts/: process.bat
_scripts/i18n/: .gitignore  README.md  cleanup_orphaned_metadata.py  generate_metadata_from_xml.py  manage_string_metadata.py  metadata_io.py  pyproject.toml  strings_metadata.json  translate_all.sh  translate_missing.sh  translate_with_context.py  update_index.py
_scripts/i18n/metadata_divesms/: backup.yaml  blocking.yaml  branding.yaml  buttons.yaml  changelog.yaml  compose.yaml  conversation_info.yaml  conversations.yaml  cross_promotion.yaml  defaults.json  dialogs.yaml  drawer.yaml  gallery.yaml  index.json  main_screen.yaml  menus.yaml  messages.yaml  navigation.yaml  notifications.yaml  other.yaml  premium.yaml  scheduled.yaml  settings.yaml  setup.yaml  theme.yaml  toasts.yaml  widgets.yaml
android-smsmms/: build.gradle
android-smsmms/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
data/: build.gradle
data/src/main/: AndroidManifest.xml
docs/: DISCORD_FORWARDING_PLAN.md
domain/: build.gradle
domain/src/main/: AndroidManifest.xml
functions/: package-lock.json  package.json
functions/src/: index.ts
gradle/wrapper/: gradle-wrapper.properties
iap/: build.gradle
libsms/: build.gradle
libsms/src/main/: AndroidManifest.xml
presentation/: build.gradle  proguard-rules.pro
presentation/src/main/: AndroidManifest.xml
startapppopups/: build.gradle
(+5706 files in other folders)
